# cppgfx-template

./: .gitignore  CMakeLists.txt  README.md  run.bat
cmake/: cppgfx.cmake
include/: algorithm.h  main.hpp
src/: algorithm.c  main.cpp
